Create Path class